--- a/backend/package.json
+++ b/backend/package.json
@@ -43,6 +43,7 @@
     "class-validator": "^0.13.2",
     "crawlee": "^3.1.2",
     "mongoose": "^6.8.2",
+    "muninn": "^0.14.0",
     "nest-commander": "^3.1.0",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
