--- a/backend/package.json
+++ b/backend/package.json
@@ -42,6 +42,7 @@
     "bcrypt": "^5.1.0",
     "class-validator": "^0.13.2",
     "crawlee": "^3.1.2",
+    "get-hrefs": "^4.0.0",
     "mongoose": "^6.8.2",
     "muninn": "^0.14.0",
     "nest-commander": "^3.1.0",
@@ -50,6 +51,8 @@
     "passport-local": "^1.0.0",
     "passport-strategy": "^1.0.0",
     "puppeteer": "^18.2.1",
+    "puppeteer-extra": "^3.3.4",
+    "puppeteer-extra-plugin-block-resources": "^2.4.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
